--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "expo-router": "^1.2.0",
     "expo-secure-store": "~12.1.1",
     "expo-splash-screen": "~0.18.2",
-    "expo-status-bar": "~1.4.2",
+    "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.7",
@@ -28,7 +28,8 @@
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-vector-icons": "^9.2.0",
-    "react-native-web": "~0.18.7"
+    "react-native-web": "~0.18.7",
+    "expo-location": "~15.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
