--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "expo": "^48.0.7",
     "expo-constants": "~14.2.1",
     "expo-linking": "~4.0.1",
+    "expo-location": "~15.1.1",
     "expo-router": "^1.2.0",
     "expo-secure-store": "~12.1.1",
     "expo-splash-screen": "~0.18.2",
@@ -22,14 +23,16 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.7",
+    "react-native-dropdown-picker": "^5.4.6",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
+    "react-native-select-dropdown": "^3.3.3",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.7",
-    "expo-location": "~15.1.1"
+    "expo-image-picker": "~14.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
