--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@react-navigation/native": "^6.1.6",
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.7",
+    "@rnmapbox/maps": "^10.0.10-rc.2",
     "expo": "^48.0.7",
     "expo-constants": "~14.2.1",
+    "expo-image-picker": "~14.1.1",
     "expo-linking": "~4.0.1",
     "expo-location": "~15.1.1",
     "expo-router": "^1.2.0",
@@ -26,13 +28,14 @@
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.9.0",
+    "react-native-leaflet-view": "^0.1.2",
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-select-dropdown": "^3.3.3",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.7",
-    "expo-image-picker": "~14.1.1"
+    "react-native-webview": "11.26.0"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
