--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
     "@react-navigation/native": "^6.1.6",
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.7",
-    "@rnmapbox/maps": "^10.0.10-rc.2",
+    "@rnmapbox/maps": "^10.0.11-rc.0",
     "expo": "^48.0.7",
     "expo-constants": "~14.2.1",
+    "expo-dev-client": "~2.2.1",
     "expo-image-picker": "~14.1.1",
     "expo-linking": "~4.0.1",
     "expo-location": "~15.1.1",
@@ -22,13 +23,15 @@
     "expo-secure-store": "~12.1.1",
     "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.4",
+    "haversine": "^1.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.7",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.9.0",
-    "react-native-leaflet-view": "^0.1.2",
+    "react-native-google-places-autocomplete": "^2.5.1",
+    "react-native-maps": "^1.7.1",
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
