--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@freakycoder/react-native-colorful-card": "^0.1.3",
     "@react-native-async-storage/async-storage": "1.17.11",
     "@react-native-community/checkbox": "^0.5.15",
+    "@react-native-community/geolocation": "^3.0.6",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@rneui/base": "^4.0.0-rc.7",
@@ -26,12 +28,13 @@
     "haversine": "^1.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.71.7",
+    "react-native": "0.71.8",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-google-places-autocomplete": "^2.5.1",
-    "react-native-maps": "^1.7.1",
+    "react-native-maps": "1.3.2",
+    "react-native-maps-directions": "^1.9.0",
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
